# BooQ

./: .env.example  .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json
.github/workflows/: build.yml
src/: main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: README.md  icon.icns
src-tauri/src/: ai_service.rs  commands.rs  config.rs  file_manager.rs  logger.rs  main.rs  mineru_service.rs  ocr_service.rs  question_analyzer.rs  rag_service.rs  utils.rs
src/modules/: contextMenu.ts  fileManager.ts  previewManager.ts  questionManager.ts  settingsManager.ts  themeManager.ts
src/styles/: main.css
src/types/: global.d.ts  tauri.d.ts
